force-app/main/default/objects/SFDC_Acct_Plan__c/SFDC_Acct_Plan__c.object-meta.xml
<CustomObject>
    <description>Overall goals, objectives, and challenges for penetrating an account.</description>
    <label>Account Plan</label>
    <nameField>
        <label>Account Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>