force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Account_Plan_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Review_Date__c</fullName>
    <description>Last date a Management Account Plan Review was completed.</description>
    <label>Account Plan Review Date</label>
    <summarizedField>Management_Account_Plan_Review__c.Completed_Date__c</summarizedField>
    <summaryForeignKey>Management_Account_Plan_Review__c.Account_Plan__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>