force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Account_Plan_Team__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Team__c</fullName>
    <label>Account Plan Team</label>
    <summaryForeignKey>Account_Plan_Additional_Team_Member__c.SFDC_Acct_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>