force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Account_Strategy_Risks__c.field-meta.xml
<CustomField>
    <fullName>Account_Strategy_Risks__c</fullName>
    <inlineHelpText>What risks do you foresee for this plan and how do you plan to mitigate them?</inlineHelpText>
    <label>Account Strategy Risks</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>