force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
            <value>
                <fullName>New Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>