force-app/main/default/objects/SFDC_Acct_Plan__c/fields/AccountPlan_Expire_date__c.field-meta.xml
<CustomField>
    <fullName>AccountPlan_Expire_date__c</fullName>
    <formula>IF(AND(TODAY() &gt; Account_Plan_Approved_Date__c + 305, TODAY() &lt; Account_Plan_Approved_Date__c + 365), 305, IF((TODAY() &gt; Account_Plan_Approved_Date__c + 365), 365, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountPlan Expire date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>