force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Additional_Team_Member_Count__c.field-meta.xml
<CustomField>
    <fullName>Additional_Team_Member_Count__c</fullName>
    <label>Additional Team Member Count</label>
    <summaryForeignKey>Account_Plan_Additional_Team_Member__c.SFDC_Acct_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>