force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Company_Description__c.field-meta.xml
<CustomField>
    <fullName>Company_Description__c</fullName>
    <inlineHelpText>Brief paragraph summarizing customer’s business, e.g., business lines and high-level financials, competitive pressure, business outlook, and company culture. Also include major industry trends that are affecting the customer or recent trigger events.</inlineHelpText>
    <label>Company Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>