force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Competitive_Landscape_Additional_Context__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Landscape_Additional_Context__c</fullName>
    <inlineHelpText>e.g., competitor geographic presence, competitor history with customer, sales tactics, relationships with customer decision makers; focus on “high” threats outlined above</inlineHelpText>
    <label>Competitive Landscape Additional Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>