force-app/main/default/objects/SFDC_Acct_Plan__c/fields/conga_text__c.field-meta.xml
<CustomField>
    <fullName>conga_text__c</fullName>
    <label>CongaTextForImage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>