force-app/main/default/objects/SFDC_Acct_Plan__c/fields/conga_url__c.field-meta.xml
<CustomField>
    <fullName>conga_url__c</fullName>
    <label>CongaNumberForWord</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>