force-app/main/default/objects/SFDC_Acct_Plan__c/fields/CongaRichTextForWord__c.field-meta.xml
<CustomField>
    <fullName>CongaRichTextForWord__c</fullName>
    <label>CongaRichTextForWord</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>