force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Consulting__c.field-meta.xml
<CustomField>
    <fullName>Consulting__c</fullName>
    <label>Consulting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mandate</fullName>
            </value>
            <value>
                <fullName>Preferred</fullName>
            </value>
            <value>
                <fullName>In Negotiation</fullName>
            </value>
            <value>
                <fullName>Some business</fullName>
            </value>
            <value>
                <fullName>No business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>