force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Contact_Levels__c.field-meta.xml
<CustomField>
    <fullName>Contact_Levels__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>We do not have the necessary relationships at the right levels of the organization.</inlineHelpText>
    <label>Poor Contact Levels</label>
    <type>Checkbox</type>
</CustomField>