force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Cost_Of_Doing_Nothing__c.field-meta.xml
<CustomField>
    <fullName>Cost_Of_Doing_Nothing__c</fullName>
    <inlineHelpText>Why should this customer consider changing from their “status quo”? What is the organizational, financial, or personal impact if they keep their “status quo”?</inlineHelpText>
    <label>Cost Of Doing Nothing</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>