force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Created_By_Batch__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checkbox is marked by the priority batch if the account plan record is created by the batch. Visible to Admin only.</inlineHelpText>
    <label>Created By Batch</label>
    <type>Checkbox</type>
</CustomField>