force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Critical_Business_Issues__c.field-meta.xml
<CustomField>
    <fullName>Critical_Business_Issues__c</fullName>
    <inlineHelpText>Which organizational state is the customer today? What are their unmet information management needs/challenges? What are they not thinking about?</inlineHelpText>
    <label>Critical Business Issues</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>