force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Customer_Business_Challenges__c.field-meta.xml
<CustomField>
    <fullName>Customer_Business_Challenges__c</fullName>
    <inlineHelpText>What are your customer’s primary challenges that IM can solve? What obstacles are in your way, and what is the plan for overcoming them? 

Think about the Industry &amp; Company Challenges - How can you teach for Iron Mountain’s differentiators?</inlineHelpText>
    <label>Customer Business Challenges</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>