force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Customer_Narrative__c.field-meta.xml
<CustomField>
    <fullName>Customer_Narrative__c</fullName>
    <inlineHelpText>Use all data (internal and external) that exists on the account and interpret it. Examples: new leadership, market expansion, international growth, trigger events. Explain what it means and why it is important to you. Do not copy and paste from website.</inlineHelpText>
    <label>Customer Narrative</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>