force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Customer_s_Highest_Priorities__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Highest_Priorities__c</fullName>
    <description>Customer’s highest priorities as a business generally (be succinct):</description>
    <inlineHelpText>Your understanding of the customers strategic priorities which can be found in the company’s annual report, website, or in discussions.</inlineHelpText>
    <label>Customer&apos;s Strategic Priorities</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>