force-app/main/default/objects/SFDC_Acct_Plan__c/fields/CY_Net_New_Billings_YTD__c.field-meta.xml
<CustomField>
    <fullName>CY_Net_New_Billings_YTD__c</fullName>
    <formula>Account__r.CY_Net_New_Billings_YTD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulled from Transactional Billing Data (TBD) : All Current Year New Billings - Previous Year Billings (YTD)</inlineHelpText>
    <label>CY Net New Billings YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>