force-app/main/default/objects/SFDC_Acct_Plan__c/fields/CY_New_DM_vol_YTD__c.field-meta.xml
<CustomField>
    <fullName>CY_New_DM_vol_YTD__c</fullName>
    <formula>Account__r.CY_New_DM_vol_YTD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulled from TBD: Unit Quantity of Total Storage CY - PY</inlineHelpText>
    <label>CY New DM vol. YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>