force-app/main/default/objects/SFDC_Acct_Plan__c/fields/CY_Storage_Spend_DM__c.field-meta.xml
<CustomField>
    <fullName>CY_Storage_Spend_DM__c</fullName>
    <formula>Account__r.CY_Storage_Spend_DM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulled from TBD: Total Revenue of Storage</inlineHelpText>
    <label>CY Storage Spend (DM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>