force-app/main/default/objects/SFDC_Acct_Plan__c/fields/CY_Storage_Volume_Container__c.field-meta.xml
<CustomField>
    <fullName>CY_Storage_Volume_Container__c</fullName>
    <formula>Account__r.CY_Storage_Volume_Container__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulled from TBD: Unit Quantity of Containers CY</inlineHelpText>
    <label>CY Storage Volume (Container)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>