force-app/main/default/objects/SFDC_Acct_Plan__c/fields/CY_Total_Billings_YTD__c.field-meta.xml
<CustomField>
    <fullName>CY_Total_Billings_YTD__c</fullName>
    <formula>Account__r.CY_Total_Billings_YTD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulled from TBD : All Billings for CY (YTD)</inlineHelpText>
    <label>CY Total Billings YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>