force-app/main/default/objects/SFDC_Acct_Plan__c/fields/CY_Total_Spend_All_Services__c.field-meta.xml
<CustomField>
    <fullName>CY_Total_Spend_All_Services__c</fullName>
    <formula>Account__r.CY_Total_Spend_All_Services__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulled TBD: All Billings classified as Services from CY</inlineHelpText>
    <label>CY Total Spend (All Services)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>