force-app/main/default/objects/SFDC_Acct_Plan__c/fields/CY_Total_Spend_DM__c.field-meta.xml
<CustomField>
    <fullName>CY_Total_Spend_DM__c</fullName>
    <formula>Account__r.CY_Total_Spend_DM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulled TBD: All CY Billings marked as DM</inlineHelpText>
    <label>CY Total Spend (DM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>