force-app/main/default/objects/SFDC_Acct_Plan__c/fields/CY_Total_Storage_DM__c.field-meta.xml
<CustomField>
    <fullName>CY_Total_Storage_DM__c</fullName>
    <formula>Account__r.CY_Total_Storage_DM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulled from TBD: Total Quantity of Storage per year in units</inlineHelpText>
    <label>CY Total Storage (DM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>