force-app/main/default/objects/SFDC_Acct_Plan__c/fields/DB_R_Owner__c.field-meta.xml
<CustomField>
    <fullName>DB_R_Owner__c</fullName>
    <formula>IF( NOT(ISBLANK(  Account__r.Primary_BDE_DB_R__c )),  Account__r.Primary_BDE_DB_R__r.FirstName  &amp; &quot; &quot; &amp; Account__r.Primary_BDE_DB_R__r.LastName, null 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary BDE - DM</label>
    <type>Text</type>
</CustomField>