force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Deepening_Expanding__c.field-meta.xml
<CustomField>
    <fullName>Deepening_Expanding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deepening/Expanding</label>
    <type>Checkbox</type>
</CustomField>