force-app/main/default/objects/SFDC_Acct_Plan__c/fields/DM_Volume__c.field-meta.xml
<CustomField>
    <fullName>DM_Volume__c</fullName>
    <formula>Account__r.DM_Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulled from TBD: Current Tape and Container Quantity</inlineHelpText>
    <label>DM Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>