force-app/main/default/objects/SFDC_Acct_Plan__c/fields/DMS__c.field-meta.xml
<CustomField>
    <fullName>DMS__c</fullName>
    <inlineHelpText>“Mandate”: The customer has decided that IM is the only supplier that they will use for this service.
“Preferred”: The customer has decided that IM is their preferred supplier for this service, but they may also evaluate our competitors.</inlineHelpText>
    <label>Document Management Solutions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mandate</fullName>
            </value>
            <value>
                <fullName>Preferred</fullName>
            </value>
            <value>
                <fullName>In Negotiation</fullName>
            </value>
            <value>
                <fullName>Some business</fullName>
            </value>
            <value>
                <fullName>No business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>