force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Do_we_have_any_Preferred_agreements__c.field-meta.xml
<CustomField>
    <fullName>Do_we_have_any_Preferred_agreements__c</fullName>
    <inlineHelpText>Preferred: IM is the supplier of choice although other suppliers can be chosen if desired (as outlined in the contract or specified by customer decision makers).</inlineHelpText>
    <label>Do we have any &apos;Preferred&apos; agreements?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Records Management</fullName>
            </value>
            <value>
                <fullName>Data Management</fullName>
            </value>
            <value>
                <fullName>Document Management Solutions</fullName>
            </value>
            <value>
                <fullName>Shred</fullName>
            </value>
            <value>
                <fullName>Fulfillment Services</fullName>
            </value>
            <value>
                <fullName>IPM</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>