force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Document_Language__c.field-meta.xml
<CustomField>
    <fullName>Document_Language__c</fullName>
    <label>Document Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>