force-app/main/default/objects/SFDC_Acct_Plan__c/fields/DPU_Rate_Avg__c.field-meta.xml
<CustomField>
    <fullName>DPU_Rate_Avg__c</fullName>
    <formula>Account__r.DPU_Rate_Avg__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DPU Rate (Avg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>