force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Employee_Size_Range__c.field-meta.xml
<CustomField>
    <fullName>Employee_Size_Range__c</fullName>
    <formula>TEXT (Account__r.IM_Number_of_Employees__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Size Range</label>
    <type>Text</type>
</CustomField>