force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Enterprise_Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Account_Executive__c</fullName>
    <formula>IF( NOT(ISBLANK( Account__r.Primary_BDE__c )), Account__r.Primary_BDE__r.FirstName &amp; &quot; &quot; &amp; Account__r.Primary_BDE__r.LastName, null 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary BDE</label>
    <type>Text</type>
</CustomField>