force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Extending_Horizontally_From_Existing__c.field-meta.xml
<CustomField>
    <fullName>Extending_Horizontally_From_Existing__c</fullName>
    <inlineHelpText>How will you extend your relationships horizontally?Consider Path 3 Buyer Groups from Blue Ocean Strategy.</inlineHelpText>
    <label>Extending Relationships Horizontally</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>