force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Formal_Business_Review_History__c.field-meta.xml
<CustomField>
    <fullName>Formal_Business_Review_History__c</fullName>
    <inlineHelpText>Indicate attendees, cadence, templates etc. If there was a template, please upload to this record.</inlineHelpText>
    <label>Formal Business Review History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>