force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Fulfillment_Services__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Services__c</fullName>
    <label>Fulfillment Services</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mandate</fullName>
            </value>
            <value>
                <fullName>Preferred</fullName>
            </value>
            <value>
                <fullName>In Negotiation</fullName>
            </value>
            <value>
                <fullName>Some Business</fullName>
            </value>
            <value>
                <fullName>No Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>