force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Geo_Presence__c.field-meta.xml
<CustomField>
    <fullName>Geo_Presence__c</fullName>
    <inlineHelpText>List the non-HQ locations where the Customer has a presence and/or conducts business.</inlineHelpText>
    <label>Geo Presence</label>
    <type>TextArea</type>
</CustomField>