force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Goal_for_Customer_Info_Mgmt_Program__c.field-meta.xml
<CustomField>
    <fullName>Goal_for_Customer_Info_Mgmt_Program__c</fullName>
    <inlineHelpText>What is our goal for the customer’s information management program? Where in the RIM 360 lifecycle is the customer’s information management program today?</inlineHelpText>
    <label>Goal for Customer Info Mgmt Program?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>