force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Goals_for_Next_Customer_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Goals_for_Next_Customer_Interaction__c</fullName>
    <inlineHelpText>What are our goals for the next customer interaction?</inlineHelpText>
    <label>Goals for Next Customer Interaction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>