force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Goals_Motivations_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Goals_Motivations_Concerns__c</fullName>
    <inlineHelpText>What is (are) the decision maker(s)’s personal goals, motivations, and concerns as they relate to information management?</inlineHelpText>
    <label>Goals, Motivations &amp; Concerns</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>