force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Growing_Sales_With_This_Account__c.field-meta.xml
<CustomField>
    <fullName>Growing_Sales_With_This_Account__c</fullName>
    <inlineHelpText>Growing sales with this account depends on</inlineHelpText>
    <label>Growing Sales With This Account</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>