force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Identify_Which_Contract__c.field-meta.xml
<CustomField>
    <fullName>Identify_Which_Contract__c</fullName>
    <description>Used to describe which contract end date is being marked on the account plan</description>
    <inlineHelpText>Indicate which contract matches the renewal date listed.</inlineHelpText>
    <label>Identify Which Contract</label>
    <length>255</length>
    <type>Text</type>
</CustomField>