force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Individual_Relationships__c.field-meta.xml
<CustomField>
    <fullName>Individual_Relationships__c</fullName>
    <inlineHelpText>Through which individual relationships will we realize the key deal(s)/opportunit(y/ies)? What is the expected timeline? How will we engage (phone, in-person, etc.)? What are the decision makers’ personal goals, motivation, concerns?</inlineHelpText>
    <label>Individual Relationships</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>