force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Information_Governance_Initiatives__c.field-meta.xml
<CustomField>
    <fullName>Information_Governance_Initiatives__c</fullName>
    <inlineHelpText>Summarize the customers current IG initiatives.</inlineHelpText>
    <label>Information Governance Initiatives</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>