force-app/main/default/objects/SFDC_Acct_Plan__c/fields/INTL_Manager_of_Owner__c.field-meta.xml
<CustomField>
    <fullName>INTL_Manager_of_Owner__c</fullName>
    <formula>Owner:User.Manager.FirstName + &quot; &quot; + Owner:User.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager of Owner</label>
    <type>Text</type>
</CustomField>