force-app/main/default/objects/SFDC_Acct_Plan__c/fields/INTL_RM_Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>INTL_RM_Sales_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Records Management Sales Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RM_Sales_Account_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>