force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Iron_Mountain_Resource_Plan__c.field-meta.xml
<CustomField>
    <fullName>Iron_Mountain_Resource_Plan__c</fullName>
    <inlineHelpText>List the Iron Mountain Employees involved in the Account Strategy for this plan and the part they play.</inlineHelpText>
    <label>Iron Mountain Team</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>