force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Key_Strategic_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Key_Strategic_Milestones__c</fullName>
    <inlineHelpText>What you are responsible for delivering (may assign to an individual referenced in Part 3d above with their agreement), Positive or negative outcome should be objectively measurable (e.g., “Secure agreement from CFO to move forward with proposal)</inlineHelpText>
    <label>Key Strategic Milestones</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>