force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Last_FBR_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_FBR_Date__c</fullName>
    <description>tells what date the last formal business review took place.</description>
    <inlineHelpText>Date you last reviewed customer strategies and Iron Mountain’s value with the customer.</inlineHelpText>
    <label>Last Business Review Date</label>
    <type>Date</type>
</CustomField>