force-app/main/default/objects/SFDC_Acct_Plan__c/fields/New_Inventory_Levels__c.field-meta.xml
<CustomField>
    <fullName>New_Inventory_Levels__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>There are low levels (vs. expected levels) of new inventory coming in for most accounts</inlineHelpText>
    <label>Low Volume of New Inventory Levels</label>
    <type>Checkbox</type>
</CustomField>