force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Next_Contract_Negotiation_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Contract_Negotiation_Date__c</fullName>
    <inlineHelpText>When is the next meeting to discuss renewing an existing or negotiating a new contract? If there are multiple contracts, enter the earliest date.</inlineHelpText>
    <label>Next Contract Negotiation Date</label>
    <type>Date</type>
</CustomField>