force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Next_FBR_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_FBR_Date__c</fullName>
    <description>Used to indicate when the next FBR will take place</description>
    <inlineHelpText>The next date you will review customer strategies and Iron Mountain’s value with the customer.</inlineHelpText>
    <label>Next Business Review Date</label>
    <type>Date</type>
</CustomField>