force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Organizational_Chart__c.field-meta.xml
<CustomField>
    <fullName>Organizational_Chart__c</fullName>
    <inlineHelpText>Paste the image of the organization chart or heat map here.</inlineHelpText>
    <label>Organization Chart</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>