force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Other_Key_IM_Personnel_Names_Roles__c.field-meta.xml
<CustomField>
    <fullName>Other_Key_IM_Personnel_Names_Roles__c</fullName>
    <label>Other Key IM Personnel (Names, Roles)</label>
    <type>TextArea</type>
</CustomField>