force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Owner_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Owner_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Hidden Field used to populate meta-data on “Owner Sales” fields</description>
    <label>Owner Lookup</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>