force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role__c</fullName>
    <formula>LastModifiedBy.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Role</label>
    <type>Text</type>
</CustomField>