force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Owner_Sales_Division__c.field-meta.xml
<CustomField>
    <fullName>Owner_Sales_Division__c</fullName>
    <description>Sales Division value from the user record</description>
    <formula>TEXT( Owner_Lookup__r.Sales_Division__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Sales Division</label>
    <type>Text</type>
</CustomField>